[gd_scene load_steps=13 format=3 uid="uid://2oxdgu03lnbk"]

[ext_resource type="Script" path="res://kinematic_fps_controller/kinematic_fps_controller.gd" id="2_8r0nc"]
[ext_resource type="Environment" uid="uid://b3cn01u84faiy" path="res://kinematic_fps_controller/underwater.tres" id="2_owsda"]
[ext_resource type="Resource" uid="uid://boafje76qrf27" path="res://kinematic_fps_controller/audio_interacts/grass_audio_interact.tres" id="3_8sa4u"]
[ext_resource type="PhysicsMaterial" path="res://kinematic_fps_controller/physics/grass.tres" id="4_ulqss"]
[ext_resource type="PhysicsMaterial" uid="uid://bklf2cx3fydt3" path="res://kinematic_fps_controller/physics/stone.tres" id="5_a0l7u"]
[ext_resource type="PhysicsMaterial" path="res://kinematic_fps_controller/physics/wood.tres" id="6_ulh2i"]
[ext_resource type="Resource" uid="uid://ci8kg40ae4vnl" path="res://kinematic_fps_controller/audio_interacts/stone_audio_interact.tres" id="7_q04jf"]
[ext_resource type="Resource" uid="uid://dx5kojv0cn4yl" path="res://kinematic_fps_controller/audio_interacts/wood_audio_interact.tres" id="8_tlqv8"]
[ext_resource type="Resource" uid="uid://clro80qf2tdqi" path="res://kinematic_fps_controller/audio_interacts/water_audio_interact.tres" id="9_pm0oi"]
[ext_resource type="Curve" path="res://kinematic_fps_controller/bob_curve.tres" id="10_jwnxu"]
[ext_resource type="AudioStream" uid="uid://dyj8811150sq5" path="res://kinematic_fps_controller/jute-dh-steps/stepdirt_1.wav" id="20_qovk2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_fn1rj"]

[node name="KinematicFpsController" type="CharacterBody3D"]
floor_snap_length = 0.5
script = ExtResource("2_8r0nc")
underwater_env = ExtResource("2_owsda")
audio_interact = ExtResource("3_8sa4u")
physic_materials = Array[PhysicsMaterial]([ExtResource("4_ulqss"), ExtResource("5_a0l7u"), ExtResource("6_ulh2i")])
audio_interacts = Array[Resource]([ExtResource("3_8sa4u"), ExtResource("7_q04jf"), ExtResource("8_tlqv8")])
water_audio_interact = ExtResource("9_pm0oi")
head_bob_curve = ExtResource("10_jwnxu")

[node name="Collision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_fn1rj")

[node name="Head Check" type="RayCast3D" parent="."]
target_position = Vector3(0, 1, 0)

[node name="Head" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.64, 0)

[node name="FirstPersonCameraReference" type="Marker3D" parent="Head"]

[node name="Camera3D" type="Camera3D" parent="Head/FirstPersonCameraReference"]

[node name="ThirdPersonCameraReference" type="Marker3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4)

[node name="Player Audios" type="Node3D" parent="."]

[node name="Jump" type="AudioStreamPlayer3D" parent="Player Audios"]
stream = ExtResource("20_qovk2")
attenuation_filter_db = -65.4

[node name="Step" type="AudioStreamPlayer3D" parent="Player Audios"]
stream = ExtResource("20_qovk2")
attenuation_filter_db = -65.4

[node name="Land" type="AudioStreamPlayer3D" parent="Player Audios"]
stream = ExtResource("20_qovk2")
attenuation_filter_db = -65.4

[node name="Crouch" type="AudioStreamPlayer3D" parent="Player Audios"]
stream = ExtResource("20_qovk2")
attenuation_filter_db = -65.4

[node name="Uncrouch" type="AudioStreamPlayer3D" parent="Player Audios"]
stream = ExtResource("20_qovk2")
attenuation_filter_db = -65.4

[node name="SwimRayCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(0, -2, 0)
collision_mask = 8
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="Detect Ground" type="RayCast3D" parent="."]
target_position = Vector3(0, -1.5, 0)
